--- a/styles/game.css
+++ b/styles/game.css
@@ -9,7 +9,7 @@ body {
     /* font-family: 'Red Hat Display', sans-serif; */
     font-size: 30px;
     box-sizing: border-box;
-    cursor: none;
+    cursor: url('/game/sprites/reticule.png') 32 32, auto;
 
     --primary: black;
     --secondary: white;
@@ -17,6 +17,7 @@ body {
     --quick: 0.15s;
 }
 canvas {
+    
     image-rendering: optimizeSpeed;             /* Older versions of FF          */
     image-rendering: -moz-crisp-edges;          /* FF 6.0+                       */
     image-rendering: -webkit-optimize-contrast; /* Safari                        */
