--- a/styles/game.css
+++ b/styles/game.css
@@ -263,6 +263,7 @@ canvas {
 }
 
 #timer {
+    display: none;
     justify-self: center;
     color: var(--secondary);
     width: 100px;
@@ -290,8 +291,9 @@ canvas {
 
 #objectives {
     justify-self: left;
-    align-self: start;
+    align-self: end;
     display:grid;
+    margin-bottom: 30px;
 }
 
 #objectives div {
@@ -308,6 +310,36 @@ canvas {
 
 #objectives .objective.primary {
     color: goldenrod;
+}
+
+#health {
+    float: left;
+    display: grid;
+    grid-auto-flow: column;
+    grid-gap: 20px;
+    justify-content: left;
+    /* padding: 30px 0; */
+}
+
+.hitPoint {
+    width: 50px;
+    height: 50px;
+    background: rgba(110, 202, 255, 0.6);
+    padding: 5px;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
+.hitPoint div {
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    background: cyan;
+}
+.hitPoint.empty {
+    background: rgba(128, 128, 128, 0.6);
+}
+.hitPoint.empty div {
+    background: grey;
 }
 
 @keyframes fadeIn {
