--- a/styles/game.css
+++ b/styles/game.css
@@ -5,9 +5,10 @@
 body {
     background: black;
     color: white;
-    font-family: 'Fira Mono', monospace;
+    font-family: 'Press Start 2P', monospace;
+
     /* font-family: 'Red Hat Display', sans-serif; */
-    font-size: 30px;
+    font-size: 24px;
     box-sizing: border-box;
     cursor: url('../game/sprites/reticule.png') 32 32, auto;
 
@@ -115,7 +116,7 @@ h1, h2, h3 {
 }
 
 h1 {
-    font-family: 'Red Hat Display', sans-serif;
+    font-family: 'Press Start 2P', monospace;
     font-size: 3em;
 }
 h2 {
@@ -146,14 +147,14 @@ p {
 
 .grade {
     font-size: 1.5em;
-    line-height: 1em;
+    line-height: 1.5em;
     display: grid;
     position: absolute;
     right: -15px;
     bottom: -15px;
     place-items: center;
-    width: 45px;
-    height: 45px;
+    width: 50px;
+    height: 50px;
     text-align: center;
     background: var(--secondary);
     color: var(--primary);
@@ -175,7 +176,7 @@ button, a > button {
     background: var(--primary);
     color: var(--secondary);
 
-    font-family: 'Fira Mono', monospace;
+    font-family: 'Press Start 2P', monospace;
     
     width: 100%;
     height: 50px;
@@ -239,7 +240,7 @@ canvas {
 .version:hover {
     background: var(--secondary);
     color: var(--primary);
-    
+    cursor: url('../pointerHover.png'), auto;    
 }
 
 #ui {
@@ -312,34 +313,46 @@ canvas {
     color: goldenrod;
 }
 
-#health {
-    float: left;
+#orbs {
     display: grid;
     grid-auto-flow: column;
+    justify-content: left;
+    padding: 20px 0;
+    align-self: start;
+    align-items: center;
     grid-gap: 20px;
+}
+
+#health {
+    justify-self: left;
+    display: grid;
+    grid-auto-flow: column;
+    grid-gap: 0px;
     justify-content: left;
     /* padding: 30px 0; */
+    background: rgba(110, 202, 255, 0.6);
+    border-radius: 5px;
+
 }
 
 .hitPoint {
-    width: 50px;
-    height: 50px;
-    background: rgba(110, 202, 255, 0.6);
+    width: 40px;
+    height: 60px;
+    
     padding: 5px;
     box-sizing: border-box;
-    border-radius: 10px;
 }
 .hitPoint div {
-    border-radius: 10px;
+    border-radius: 5px;
     width: 100%;
     height: 100%;
     background: cyan;
 }
 .hitPoint.empty {
-    background: rgba(128, 128, 128, 0.6);
+    background: rgba(61, 61, 61, 0.6);
 }
 .hitPoint.empty div {
-    background: grey;
+    background: rgb(61, 61, 61);
 }
 
 @keyframes fadeIn {
