--- a/styles/game.css
+++ b/styles/game.css
@@ -77,6 +77,27 @@ canvas {
 	animation: gradient 20s infinite;
 }
 
+#pauseScreen {
+    padding: 10vw;
+    max-width: 1200px;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 50px;
+}
+
+.controls {
+    color: white;
+    background: rgba(0,0,0, 0.5);
+    padding: 20px 40px 0;
+    box-sizing: border-box;
+}
+.controls p {
+    color: var(--secondary);
+}
+.controlsGrid {
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+}
+
 /* #screenEffects {
     position: fixed;
     cursor: default;
@@ -248,7 +269,7 @@ canvas {
     box-sizing: border-box;
     width: 100vw;
     height: 100vh;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto auto auto 1fr;
     padding: 30px;
     z-index: 1;
     display: none;
@@ -292,14 +313,14 @@ canvas {
 
 #objectives {
     justify-self: left;
-    align-self: end;
+    align-self: start;
     display:grid;
-    margin-bottom: 30px;
+    margin-top: 70px;
 }
 
 #objectives div {
     opacity: 0;
-    padding: 5px 10px;
+    padding: 10px 10px 5px;
     font-size: 0.7em;
 }
 
@@ -322,6 +343,16 @@ canvas {
     align-items: center;
     grid-gap: 20px;
 }
+
+.orbNumber {
+    color: white;
+    animation: orbPulse 0.5s ease-out;
+}
+@keyframes orbPulse {
+    from { color: var(--secondary); }
+    to { color: white;}
+}
+
 
 #health {
     justify-self: left;
